--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "mongoose": "^6.2.2",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
-    "path": "^0.12.7"
+    "password-validator": "^5.2.1",
+    "path": "^0.12.7",
+    "validator": "^13.7.0"
   }
 }
