--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "concurrently": "^5.2.0",
     "http-server": "^0.11.1",
     "live-server": "^1.2.1",
-    "node-sass": "^7.0.1"
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "run-script-os": "^1.1.6"
